fix align-left

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 body {
   --hue: var(--hue-neutral);
   font-family: "Kdam Thmor Pro", sans-serif;
-  font-size: 1.2rem;
+  font-size: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -26,10 +26,10 @@ body.wrong {
   --hue: var(--hue-wrong);
 }
 .container {
-  width: 700px;
+  width: 800px;
   max-width: 85%;
   height: 60vh;
-  min-height: 580px;
+  min-height: 480px;
   background-color: white;
   border-radius: 5px;
   padding: 10px;
@@ -50,6 +50,7 @@ body.wrong {
 }
 
 .btn {
+  text-align: left;
   --hue: var(--hue-neutral);
   border: 3px solid hsl(var(--hue), 100%, 30%);
   background-color: hsl(var(--hue), 100%, 50%);
